--- a/pages/politica.html
+++ b/pages/politica.html
@@ -41,88 +41,119 @@
         <p><strong>Última atualização: 13 de setembro de 2024</strong></p>
 
         <h2>1. Introdução</h2>
-        <p>Nós, da <strong>Ajuda Cidadão</strong>, valorizamos a privacidade de nossos usuários e estamos comprometidos
+        <p>
+            Nós, da <strong>Ajuda Cidadão</strong>, valorizamos a privacidade de nossos usuários e estamos comprometidos
             em proteger as informações pessoais que você nos fornece. Esta Política de Privacidade descreve como
             coletamos, usamos, divulgamos e protegemos suas informações quando você acessa ou utiliza nosso site,
-            serviços e produtos.</p>
-        <p>Ao acessar nosso site ou utilizar nossos serviços, você concorda com as práticas descritas nesta Política de
+            serviços e produtos.
+        </p>
+        <p>
+            Ao acessar nosso site ou utilizar nossos serviços, você concorda com as práticas descritas nesta Política de
             Privacidade. Se você não concorda com os termos aqui descritos, recomendamos que não utilize nossos
-            serviços.</p>
+            serviços.
+        </p>
 
         <h2>2. Informações que Coletamos</h2>
         <p>Podemos coletar os seguintes tipos de informações pessoais:</p>
         <ul>
             <li><strong>Informações de identificação pessoal</strong>: nome, endereço de e-mail, telefone, CPF, endereço
-                postal.</li>
+                postal.
+            </li>
             <li><strong>Informações de uso</strong>: detalhes sobre como você utiliza nosso site e serviços, incluindo
-                páginas visitadas, tempo de navegação e comportamento no site.</li>
+                páginas visitadas, tempo de navegação e comportamento no site.
+            </li>
             <li><strong>Informações financeiras</strong>: dados de pagamento (quando aplicável) como número de cartão de
-                crédito e outras informações para processar pagamentos.</li>
+                crédito e outras informações para processar pagamentos.
+            </li>
             <li><strong>Dados técnicos</strong>: endereço IP, tipo de navegador, sistema operacional, dispositivo
-                utilizado e outras informações técnicas.</li>
+                utilizado e outras informações técnicas.
+            </li>
         </ul>
 
         <h2>3. Como Utilizamos Suas Informações</h2>
         <p>As informações que coletamos podem ser usadas para os seguintes propósitos:</p>
         <ul>
             <li><strong>Fornecimento de serviços</strong>: processar pedidos, fornecer produtos e serviços e gerenciar
-                transações.</li>
+                transações.
+            </li>
             <li><strong>Comunicação</strong>: responder às suas perguntas, fornecer suporte ao cliente e enviar
-                notificações importantes sobre seus pedidos ou nosso serviço.</li>
+                notificações importantes sobre seus pedidos ou nosso serviço.
+            </li>
             <li><strong>Marketing</strong>: enviar e-mails promocionais e newsletters (com seu consentimento), realizar
-                campanhas de publicidade e marketing.</li>
+                campanhas de publicidade e marketing.
+            </li>
             <li><strong>Melhoria do serviço</strong>: monitorar e analisar o uso do site para melhorar a funcionalidade,
-                design e desempenho.</li>
-            <li><strong>Segurança</strong>: prevenir fraudes e proteger a integridade do sistema.</li>
+                design e desempenho.
+            </li>
+            <li><strong>Segurança</strong>: prevenir fraudes e proteger a integridade do sistema.
+            </li>
         </ul>
 
         <h2>4. Compartilhamento de Informações</h2>
-        <p>Nós não vendemos, trocamos ou alugamos suas informações pessoais para terceiros. Podemos compartilhar suas
-            informações nas seguintes circunstâncias:</p>
+        <p>
+            Nós não vendemos, trocamos ou alugamos suas informações pessoais para terceiros. Podemos compartilhar suas
+            informações nas seguintes circunstâncias:
+        </p>
         <ul>
             <li><strong>Com fornecedores de serviço</strong>: para ajudar com a operação do nosso site, processamento de
-                pagamentos ou prestação de serviços em nosso nome.</li>
+                pagamentos ou prestação de serviços em nosso nome.
+            </li>
             <li><strong>Quando exigido por lei</strong>: podemos divulgar suas informações para cumprir obrigações
-                legais, como ordens judiciais ou investigações governamentais.</li>
+                legais, como ordens judiciais ou investigações governamentais.
+            </li>
             <li><strong>Transferências empresariais</strong>: em caso de fusão, aquisição ou venda de ativos, suas
-                informações podem ser transferidas para terceiros.</li>
+                informações podem ser transferidas para terceiros.
+            </li>
         </ul>
 
         <h2>5. Armazenamento e Segurança de Dados</h2>
-        <p>Utilizamos medidas de segurança adequadas para proteger suas informações contra acesso não autorizado,
+        <p>
+            Utilizamos medidas de segurança adequadas para proteger suas informações contra acesso não autorizado,
             alteração, divulgação ou destruição. No entanto, nenhum método de transmissão pela Internet ou de
             armazenamento eletrônico é completamente seguro, e não podemos garantir a segurança absoluta dos seus dados.
         </p>
 
         <h2>6. Cookies e Tecnologias Semelhantes</h2>
-        <p>Nosso site utiliza cookies para melhorar sua experiência de navegação. Um cookie é um pequeno arquivo de
-            texto que é armazenado no seu dispositivo quando você acessa nosso site. Utilizamos cookies para:</p>
+        <p>
+            Nosso site utiliza cookies para melhorar sua experiência de navegação. Um cookie é um pequeno arquivo de
+            texto que é armazenado no seu dispositivo quando você acessa nosso site. Utilizamos cookies para:
+        </p>
         <ul>
-            <li><strong>Personalizar o conteúdo</strong> que você vê com base em suas preferências.</li>
-            <li><strong>Analisar o tráfego</strong> e a performance do site.</li>
+            <li><strong>Personalizar o conteúdo</strong> que você vê com base em suas preferências.
+            </li>
+            <li><strong>Analisar o tráfego</strong> e a performance do site.
+            </li>
         </ul>
-        <p>Você pode desativar os cookies a qualquer momento ajustando as configurações do seu navegador, embora isso
-            possa impactar sua experiência no site.</p>
+        <p>
+            Você pode desativar os cookies a qualquer momento ajustando as configurações do seu navegador, embora isso
+            possa impactar sua experiência no site.
+        </p>
 
         <h2>7. Seus Direitos</h2>
         <p>Você tem o direito de:</p>
         <ul>
-            <li><strong>Acessar, corrigir ou atualizar</strong> suas informações pessoais a qualquer momento.</li>
+            <li><strong>Acessar, corrigir ou atualizar</strong> suas informações pessoais a qualquer momento.
+            </li>
             <li><strong>Solicitar a exclusão</strong> de suas informações pessoais, exceto quando for necessário para
-                cumprir obrigações legais ou contratuais.</li>
+                cumprir obrigações legais ou contratuais.
+            </li>
             <li><strong>Optar por não receber comunicações de marketing</strong>: você pode cancelar a inscrição de
                 e-mails promocionais a qualquer momento clicando no link de descadastramento presente nas mensagens.
             </li>
         </ul>
 
         <h2>8. Alterações na Política de Privacidade</h2>
-        <p>Reservamo-nos o direito de alterar esta Política de Privacidade a qualquer momento. Qualquer alteração será
+        <p>
+            Reservamo-nos o direito de alterar esta Política de Privacidade a qualquer momento. Qualquer alteração será
             comunicada através de uma atualização nesta página e indicaremos a data da última revisão. Recomendamos que
-            você revise periodicamente esta página para se manter informado sobre como protegemos suas informações.</p>
+            você revise periodicamente esta página para se manter informado sobre como protegemos suas informações.
+        </p>
 
         <h2>9. Contato</h2>
-        <p>Se você tiver qualquer dúvida ou preocupação sobre esta Política de Privacidade ou sobre o tratamento das
-            suas informações pessoais, entre em contato conosco:</p>
+        <p>
+            Se você tiver qualquer dúvida ou preocupação sobre esta Política de Privacidade ou sobre o tratamento das
+            suas informações pessoais, entre em contato conosco:
+        </p>
         <ul>
             <li><strong>Ajuda Cidadão</strong></li>
             <li>E-mail: ajudacidadaosf@gmail.com</li>
@@ -206,6 +237,6 @@
       <div class="vw-plugin-top-wrapper"></div>
     </div>
 </div>
+<!-- Eduardo Dos Santos Ferreira -->
 </body>
-
 </html>
