--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/aos.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
@@ -64,7 +65,8 @@
         <section class="hero text-white text-center">
             <div class="container text-center mt-5">
                 <h1 class="display-2" data-aos="fade-down">Bem-vindo a Ajuda Cidadão</h1>
-                <p class="lead" data-aos="fade-top">Atendimento online ou presencial. Todos nossos consultores são certificados pela FEBRABAN, LGPD e PLDFT.</p>
+                <p class="lead" data-aos="fade-top">Atendimento online ou presencial. Todos nossos consultores são
+                    certificados pela FEBRABAN, LGPD e PLDFT.</p>
                 <button class="hero-button" onclick="mostrarFormulario()">Selecione como podemos ajudar!</button>
             </div>
         </section>
@@ -78,7 +80,8 @@
                                 <i class="fas fa-car fa-3x" style="color:#FEC260;" aria-label="Ícone de Financiamento de Veículos"></i>
                             </div>
                             <h5 class="card-title">Financiamento de Veículos</h5>
-                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Financiamento%20de%20ve%C3%ADculo" class="btn-custom">Saiba Mais</a>
+                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Financiamento%20de%20ve%C3%ADculo"
+                                class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +93,8 @@
                                 <i class="fas fa-piggy-bank fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo com Garantia do FGTS"></i>
                             </div>
                             <h5 class="card-title">Empréstimo com Garantia do FGTS</h5>
-                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20com%20Garantia%20do%20FGTS" class="btn-custom">Saiba Mais</a>
+                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20com%20Garantia%20do%20FGTS"
+                                class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +106,8 @@
                                 <i class="fas fa-hand-holding-usd fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo Consignado INSS"></i>
                             </div>
                             <h5 class="card-title">Empréstimo Consignado INSS</h5>
-                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20Consignado%20INSS" class="btn-custom">Saiba Mais</a>
+                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20Consignado%20INSS"
+                                class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -114,7 +119,8 @@
                                 <i class="fas fa-university fa-3x" style="color:#FEC260;" aria-label="Ícone de Empréstimo para Servidores Públicos"></i>
                             </div>
                             <h5 class="card-title">Empréstimo para Servidores Públicos</h5>
-                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20para%20Servidores%20P%C3%BAblicos" class="btn-custom">Saiba Mais</a>
+                            <a href="https://wa.me/5513996679977?text=Ol%C3%A1%20venho%20pelo%20site%20do%20Ajuda%20Cidad%C3%A3o%20e%20quero%20saber%20sobre%20Empr%C3%A9stimo%20para%20Servidores%20P%C3%BAblicos"
+                                class="btn-custom">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -316,15 +322,13 @@
             <div class="row align-items-center">
                 <!-- Coluna da Imagem -->
                 <div class="col-md-6">
-                    <img src="assets/img/images/pexels-photo-7979597.jpg" class="img-fluid rounded"
-                        alt="Imagem de uma pessoa utilizando um laptop" data-aos="fade-right">
+                    <img src="assets/img/images/pexels-photo-7979597.jpg" class="img-fluid rounded" alt="Imagem de uma pessoa utilizando um laptop" data-aos="fade-right">
                 </div>
                 <!-- Coluna de Informação -->
                 <div class="col-md-6">
                     <br>
                     <h2>NOSSA MISSÃO</h2>
-                    <p>Gerar valor e satisfação a clientes, colaboradores e parceiros, atingindo a excelência de maneira
-                        sustentável.</p>
+                    <p>Gerar valor e satisfação a clientes, colaboradores e parceiros, atingindo a excelência de maneira sustentável.</p>
                     <div class="row">
                         <div class="col-md-6 mb-4">
                             <div class="icon-box" data-aos="fade-top">
@@ -363,7 +367,7 @@
             <div class="carousel-item active">
                 <img src="assets/img/images/foto1.webp" class="d-block w-100" style="height: 550px; object-fit: cover;" alt="Imagem Placeholder 1">
                 <div class="carousel-caption d-none d-md-block" style="top: 50px; bottom: auto; color: #b8860b; text-align: left; left: 10%;">
-                    <h5  class="display-4" data-aos="fade-right">Atendimento Online</h5>
+                    <h5 class="display-4" data-aos="fade-right">Atendimento Online</h5>
                     <p class="lead" data-aos="fade-right">Saia das filas!</p>
                 </div>
             </div>
@@ -403,30 +407,38 @@
                     <!-- Button Grid with Icons -->
                     <div class="row gy-3">
                         <div class="col-6" data-aos="fade-right">
-                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Empréstimo%20INSS" class="btn btn-outline-light w-100">
-                                <i class="fas fa-file-invoice-dollar" aria-label="Ícone de Empréstimo INSS"></i> Empréstimo INSS
+                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Empréstimo%20INSS"
+                                class="btn btn-outline-light w-100">
+                                <i class="fas fa-file-invoice-dollar" aria-label="Ícone de Empréstimo INSS"></i>
+                                Empréstimo INSS
                             </a>
                         </div>
                         <div class="col-6" data-aos="fade-top">
-                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Saque%20Aniversário" class="btn btn-outline-light w-100">
+                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Saque%20Aniversário"
+                                class="btn btn-outline-light w-100">
                                 <i class="fas fa-bolt" aria-label="Ícone de Saque Aniversário"></i> Saque Aniversário
                             </a>
                         </div>
                         <div class="col-6" data-aos="fade-right">
-                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Crédito%20Conta%20de%20Luz" class="btn btn-outline-light w-100">
-                                <i class="fas fa-lightbulb" aria-label="Ícone de Crédito Conta de Luz"></i> Crédito Conta de Luz
+                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Crédito%20Conta%20de%20Luz"
+                                class="btn btn-outline-light w-100">
+                                <i class="fas fa-lightbulb" aria-label="Ícone de Crédito Conta de Luz"></i> Crédito
+                                Conta de Luz
                             </a>
                         </div>
                         <div class="col-6" data-aos="fade-top">
-                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Ponto%20INSS%20Digital" class="btn btn-outline-light w-100">
-                                <i class="fas fa-hand-holding-usd" aria-label="Ícone de Ponto INSS Digital"></i> Ponto INSS Digital
+                            <a href="https://wa.me/5513996679977?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20Ponto%20INSS%20Digital"
+                                class="btn btn-outline-light w-100">
+                                <i class="fas fa-hand-holding-usd" aria-label="Ícone de Ponto INSS Digital"></i> Ponto
+                                INSS Digital
                             </a>
                         </div>
                     </div>
                 </div>
                 <!-- Image Section -->
                 <div class="col-md-6 mt-4 mt-md-0">
-                    <img src="assets/img/images/pexels-photo-3768131.jpg" class="img-fluid rounded" alt="Imagem de uma pessoa segurando uma guitarra">
+                    <img src="assets/img/images/pexels-photo-3768131.jpg" class="img-fluid rounded"
+                        alt="Imagem de uma pessoa segurando uma guitarra">
                 </div>
             </div>
         </div>
@@ -484,7 +496,8 @@
                     <ul class="list-unstyled">
                         <li><i class="fas fa-envelope" aria-label="Ícone de Email"></i>ajudacidadaosf@gmail.com</li>
                         <li><i class="fas fa-phone" aria-label="Ícone de Telefone"></i> +55 (13) 99667-9977 </li>
-                        <li><i class="fas fa-map-marker-alt" aria-label="Ícone de Localização"></i> R. Ver. João de Almeida Batista, 80, Itanhaém, SP</li>
+                        <li><i class="fas fa-map-marker-alt" aria-label="Ícone de Localização"></i> R. Ver. João de
+                            Almeida Batista, 80, Itanhaém, SP</li>
                     </ul>
                 </div>
             </div>
@@ -496,13 +509,16 @@
                     <p class="mb-0">&copy; 2024 Ajuda Cidadão. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <a href="https://www.facebook.com/ajudacidadao.oficial/" class="text-light me-3" aria-label="Facebook">
+                    <a href="https://www.facebook.com/ajudacidadao.oficial/" class="text-light me-3"
+                        aria-label="Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://www.instagram.com/ajudacidadao.oficial/" class="text-light me-3" aria-label="Instagram">
+                    <a href="https://www.instagram.com/ajudacidadao.oficial/" class="text-light me-3"
+                        aria-label="Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/ajuda-cidadao-994b98266/" class="text-light" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/ajuda-cidadao-994b98266/" class="text-light"
+                        aria-label="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
@@ -541,7 +557,8 @@
         </div>
     </div>
     <!-- Ícone do WhatsApp -->
-    <div class="whatsapp-icon" onclick="window.open('https://wa.me/5513996679977?text=Olá%20Leonardo,%20venho%20pelo%20site%20do%20Ajuda%20cidadão.', '_blank')">
+    <div class="whatsapp-icon"
+        onclick="window.open('https://wa.me/5513996679977?text=Olá%20Leonardo,%20venho%20pelo%20site%20do%20Ajuda%20cidadão.', '_blank')">
         <i class="fab fa-whatsapp fa-3x" aria-label="Ícone do WhatsApp"></i>
     </div>
     <!-- Scripts -->
@@ -567,7 +584,6 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-
+<!-- Eduardo Dos Santos Ferreira -->
 </body>
-
 </html>
