--- a/pages/faq.html
+++ b/pages/faq.html
@@ -12,7 +12,7 @@
     <!-- FontAwesome CSS (para os ícones) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Custom CSS -->
-     <link rel="stylesheet" href="../assets/css/faq.css">
+    <link rel="stylesheet" href="../assets/css/faq.css">
 </head>
 
 <body>
@@ -60,7 +60,7 @@
         </div>
     </nav>
 
-    <!-- FAQ Section -->
+    <!-- Seção de Perguntas Frequentes (FAQ) -->
     <section id="faq" class="faq-section">
         <div class="container">
             <h2 class="faq-title text-center">Perguntas Frequentes</h2>
@@ -77,7 +77,6 @@
                                     </button>
                                 </h5>
                             </div>
-
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#faqAccordion">
                                 <div class="card-body">
@@ -109,8 +108,7 @@
                             <div class="card-header" id="headingThree">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseThree" aria-expanded="false"
-                                        aria-controls="collapseThree">
+                                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                         Vocês fazem empréstimo na conta de luz?
                                     </button>
                                 </h5>
@@ -128,8 +126,7 @@
                             <div class="card-header" id="headingFour">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseFour" aria-expanded="false"
-                                        aria-controls="collapseFour">
+                                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                         Vocês atendem apenas com Presencial?
                                     </button>
                                 </h5>
@@ -146,16 +143,19 @@
             </div>
         </div>
     </section>
-    <!-- Footer -->
+
+    <!-- Rodapé -->
     <footer id="Footer" class="bg-dark text-light py-5">
         <div class="container">
-            <div class="row"> <!-- Seção: Sobre Nós -->
+            <div class="row">
+                <!-- Seção: Sobre Nós -->
                 <div class="col-md-4">
                     <h5>Sobre Nós</h5>
                     <p class="small">A Finanças Inteligentes é uma empresa dedicada a ajudar seus clientes a tomar
                         decisões financeiras inteligentes e personalizadas. Oferecemos uma ampla gama de serviços para
                         atender às suas necessidades.</p>
-                </div> <!-- Seção: Links Rápidos -->
+                </div>
+                <!-- Seção: Links Rápidos -->
                 <div class="col-md-4">
                     <h5>Links Rápidos</h5>
                     <ul class="list-unstyled">
@@ -165,16 +165,18 @@
                         <li><a href="#sobre" class="text-light">Sobre Nós</a></li>
                         <li><a href="#" class="text-light">Política de Privacidade</a></li>
                     </ul>
-                </div> <!-- Seção: Contato -->
+                </div>
+                <!-- Seção: Contato -->
                 <div class="col-md-4">
                     <h5>Contato</h5>
                     <ul class="list-unstyled">
-                        <li><i class="fas fa-envelope"></i>ajudacidadaosf@gmail.com</li>
+                        <li><i class="fas fa-envelope"></i> ajudacidadaosf@gmail.com</li>
                         <li><i class="fas fa-phone"></i> +55 (13) 99667-9977 </li>
                         <li><i class="fas fa-map-marker-alt"></i> R. Ver. João de Almeida Batista, 80, Itanhaém, SP</li>
                     </ul>
                 </div>
-            </div> <!-- Linha separadora -->
+            </div>
+            <!-- Linha separadora -->
             <hr class="my-4">
             <div class="row">
                 <!-- Redes Sociais -->
@@ -196,12 +198,13 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../assets/js/securaty.js"></script>
     <script src="../assets/js/nav.js"></script>
     <script src="../assets/js/darkmode.js"></script>
+    <!-- Eduardo Dos Santos Ferreira -->
 </body>
-
 </html>
